kubeflow/addons/minio-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: minio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
